# popcornbench

./: .env.example  .gitignore  README.md  pyproject.toml  runs.json  style.css  sweep.example.toml
docs/reference/: env-vars.md  index.md  personas.md  predicates.md  scenarios.md  sweep-config.md  tools.md
kernels/domains/: README.md
kernels/kernelbench/level1/popcorn/: 10_SampledDenseDenseMatmulEdges.py  11_DegreeNormalizedAggregation.py  12_DeepSeekMoEDispatchPermute.py  13_FarthestPointSampling3D.py  14_GaussianProcessRBFKernel.py  15_COOScatterAddNodeFeatures.py  16_DeepSeekMoECombineScatter.py  17_CSRMaxAggregation.py  18_CSRMultiHeadSpMM.py  19_PairwiseDistanceMatrix.py  1_Conv1d_Depthwise.py  20_RotaryPositionEmbeddingBio.py  21_RadialBasisFunctionExpansion.py  22_SE3InvariantLinear.py  23_virtual_all_reduce_mean.py  24_VoxelGridPooling.py  25_virtual_reduce_scatter_masked_sum.py  26_ImportanceSampling.py  27_permutation_all_to_all.py  28_DirichletMultinomialLogLikelihood.py  29_logsumexp_across_virtual_ranks.py  2_GraphEdgeSoftmaxCSR.py  30_broadcast_masked_from_row0.py  31_bitmask_or_popcount.py  32_argmax_tiebreak_smallest_rank.py  3_CSRSpMMMessagePassing.py  4_GJKRobotEnvironmentIntersection.py  5_Conv1d_Causal.py  6_EdgeSoftmaxMultiHeadCSR.py  7_Conv1d_FFT.py  8_SegmentTopKCSR.py  9_AssociativeScan.py  README.md
kernels/kernelbench/level2/popcorn/: 10_GFVLA_FusedPairwiseNodeAggregate.py  (+50 more)
popcorn.single_problem/: trace.jsonl
popcorn_world/: pyproject.toml  scenarios.toml  world.toml
popcorn_world/personas/: code_reviewer.toml  methodical_engineer.toml  normal.toml  normal_translation.toml  speed_obsessed.toml
popcorn_world/popcorn_world/: __init__.py  predicates.py  state.py  tools.py
popcorn_world/scenarios/: __init__.py  judge_review.py  single_problem.py  translate_problem.py
scripts/: publish_traces.py  run_sweep.py
site/: app.js  index.html  runs.html
src/kernelbench/: dataset.py  eval.py  extended_metrics.py  hardware_translation_utils.py  kernel_static_checker.py  make_hf_dataset.py  nsight_parser.py  prompt_constructor_toml.py  sass_parser.py
(+56 files in other folders)
