[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "popcornbench"
version = "0.3.0.dev0"
requires-python = "==3.10.*"
description = "KernelBench fork driven by ensemble. Library + popcorn_world."
dependencies = [
    "torch>=2.9.0",
    "transformers",
    "datasets>=2.19.0",
    "tqdm",
    "packaging",
    "setuptools",
    "pydra-config",
    "ninja",
    "tomli",
    "tabulate",
    "einops",
    "python-dotenv",
    "numpy",
    "openai",
    "litellm[proxy]",
    "gpn",
]

[project.optional-dependencies]
gpu = [
    "triton",
    "nvidia-cutlass-dsl",
    "tilelang",
    "cupy-cuda12x",
    "nsight-python",
]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.workspace]
members = ["popcorn_world"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kernelbench*"]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
gpn = { git = "https://github.com/songlab-cal/gpn.git" }
# popcorn_world lives in this repo; the world plugin imports ensemble,
# which the user installs from their local ensemble checkout.
popcorn-world = { workspace = true }

[tool.setuptools.package-data]
kernelbench = ["prompts/**/*"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
