[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "popcorn-world"
version = "0.1.0.dev0"
requires-python = "==3.10.*"
description = "Ensemble world wrapping KernelBench: GPU kernel authoring as a multi-actor RL environment."
dependencies = [
    "popcornbench",
    "ensemble",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["popcorn_world*"]
